@@ -25,6 +25,7 @@ class DcpAppletMetadata;
 class DcpAppletButtons;
 class Category;
 class DcpMostUsed;
+class MLabel;
 
 class DcpAppletCategoryPage : public DcpPage
 {
@@ -42,7 +43,7 @@ public:
     int appletCount();
     DcpAppletMetadata* appletMetadata(int i);
     void setDelayedContent(bool);
-    void createBody();
+    void createBody(bool hasSpacerAtTheEnd = true);
 
 protected:
     virtual void retranslateUi();
@@ -69,6 +70,7 @@ private:
     DcpMostUsed *m_MostUsed;
     friend class Ut_DcpAppletCategoryPage;
     bool m_DelayedContent;
+    MLabel* m_SubHeader;
 };
 
 #endif
