@@ -1,8 +1,10 @@
 duicontrolpanel (0.12.21~unreleased) unstable; urgency=low
 
-  * up
+  * Fixes: NB#260681 - 'Show events from:'
+    §qtn_home_events_settings_subheader§ subheader should be shown in
+    Notifications -> Events feed
 
- -- Robert Manner <robert.manner@blumsoft.eu>  Thu, 02 Jun 2011 09:12:45 +0200
+ -- Robert Manner <robert.manner@blumsoft.eu>  Thu, 02 Jun 2011 15:45:48 +0200
 
 duicontrolpanel (0.12.20) unstable; urgency=low
 
